fix spacing issue with resizing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -321,18 +321,21 @@ label:hover:before {
 }
 
 /*user profile**/
+.container {
+   width: 1000px;
+}
 .img-center{
   display: block;
 	margin: 0px auto;
 	text-align: center;
 }
 #img-profile{
-	padding: 19px;
+	padding: 19px auto;
 }
 .container #img-profile{
-	margin-top: 20px;
+	margin-top: 20px auto;
   background-color: lightgrey;
-  padding-bottom: 1px;
+  padding-bottom: 28px;
 }
 .margin-img{
 	margin-right: 10px;
@@ -344,10 +347,10 @@ label:hover:before {
 
 .text {
   display: block;
-  margin-top: 21px;
-  padding-right: 40%;
-  padding-left: 2%;
-  padding-bottom: 10%;
+  margin-top: 21px auto;
+  padding-right: 40% auto;
+  padding-left: 2% auto;
+  padding-bottom: 10% auto;
 }
 
 #profile-color {
